<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="hello_world">Привет, мир!</string>
    <string name="add_item_toolbar_title">Новая запись</string>
    <string name="rub_symbol">&#x20bd;</string>
    <string name="add_item_title_hint">Название</string>
    <string name="add_item_price_hint">0</string>
    <string name="item_list_price_formatter">%d &#x20bd;</string>
    <string name="main_screen_title">Учет бюджета</string>

    <string name="tab_incomes">Доходы</string>
    <string name="tab_expenses">Расходы</string>
    <string name="tab_balance">Баланс</string>

    <string-array name="tab_title">
        <item>@string/tab_expenses</item>
        <item>@string/tab_incomes</item>
        <item>@string/tab_balance</item>
    </string-array>

    <string name="dialog_title">Удаление</string>
    <string name="dialog_question">Вы уверены?</string>

    <string name="balance_dummy">Тут будет фрагмент "Баланс", а пока его нет, смотреть тут не на что.</string>
    <string name="app_auth_failure">Авторизация отклонена</string>
    <string name="google_auth_failure">Авторизация через Google провалена</string>
    <string name="slogan">Ваш незаменимый помощник в управлении бюджетом</string>
    <string name="success_msg">success</string>

    <string name="your_balance">ваш баланс</string>
    <string name="expense_title">расход</string>
    <string name="income_title">доход</string>
</resources>
