<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_pattern"
    tools:context="com.miralas.moneytracker.AddItemActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:paddingHorizontal="22dp"
        android:gravity="center_vertical"
        android:background="@color/white">

        <EditText
            android:id="@+id/name"
            android:background="@null"
            android:hint="@string/add_item_title_hint"
            android:maxLines="1"
            android:inputType="text"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/price"
            android:layout_marginLeft="8dp"
            android:gravity="right"
            android:background="@null"
            android:hint="@string/add_item_price_hint"
            android:maxLines="1"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="@null"
            android:gravity="right"
            android:text="@string/rub_symbol" />

        <Button
            android:enabled="false"
            android:id="@+id/add_btn"
            android:layout_marginLeft="22dp"
            android:background="@drawable/ic_add"
            android:layout_width="26dp"
            android:layout_height="26dp" />

    </LinearLayout>

</LinearLayout>
