<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/balace_padding"
    android:background="@drawable/bg_pattern">

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/balance_total_color"
        android:textSize="@dimen/total_balance_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="14500 P" />

    <TextView
        android:id="@+id/total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_balance"
        android:textColor="@color/balance_secondary_text_color"
        android:textSize="@dimen/total_balance_title_text_size"
        app:layout_constraintEnd_toEndOf="@+id/total"
        app:layout_constraintStart_toStartOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/balanse_expense_color"
        android:textSize="@dimen/balance_summ_size"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_title"
        tools:text="4500 P" />

    <TextView
        android:id="@+id/expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_title"
        android:textColor="@color/balance_secondary_text_color"
        android:textSize="@dimen/balance_secondary_text_size"
        app:layout_constraintEnd_toEndOf="@+id/expense"
        app:layout_constraintStart_toStartOf="@+id/expense"
        app:layout_constraintTop_toBottomOf="@+id/expense" />

    <TextView
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/balance_income_color"
        android:textSize="@dimen/balance_summ_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/total_title"
        tools:text="19000 P" />

    <TextView
        android:id="@+id/income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_title"
        android:textColor="@color/balance_secondary_text_color"
        android:textSize="@dimen/balance_secondary_text_size"
        app:layout_constraintEnd_toEndOf="@+id/income"
        app:layout_constraintStart_toStartOf="@+id/income"
        app:layout_constraintTop_toBottomOf="@+id/income" />

    <com.miralas.moneytracker.DiagramView
        android:id="@+id/diagram"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="@dimen/zero_margin"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_title" />

</android.support.constraint.ConstraintLayout>